# core-bpf-migratoooor

./: .gitignore  Cargo.toml  README.md  run.sh  start
cli/: Cargo.toml  README.md
cli/src/: client.rs  cmd.rs  command.rs  conformance.rs  dirs.rs  feature.rs  file.rs  main.rs  output.rs  program.rs  setup.rs  validator.rs
harness/: Cargo.toml
harness/src/: lib.rs  validator.rs
program/: Cargo.toml  README.md
program/src/: lib.rs  processor.rs
programs/activator/: Cargo.toml
programs/activator/src/: lib.rs
programs/stub/: Cargo.toml
programs/stub/src/: lib.rs
scripts/: fetch_program.sh
src/: main.rs  output.rs  program.rs  validator.rs
src/harness/: mod.rs
src/test_suite/: config.rs  mod.rs
