[workspace]
members = [
    "harness",
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
cbm-program-activator = { path = "./programs/activator", version = "0.1.0" }
cbm-program-stub = { path = "./programs/stub", version = "0.1.0" }
solana-logger = "=2.0.7"
solana-program = "=2.0.7"
solana-sdk = "=2.0.7"
solana-test-validator = "=2.0.7"
