[package]
name = "cbm-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
cbm-harness = { workspace = true }
clap = { version = "4.5.4", features = ["derive"] }
solana-sdk = { workspace = true }
termcolor = "1.4.1"
tokio = { version = "1.37.0", features = ["full"] }

[[bin]]
name = "cbm"
path = "src/main.rs"
