[package]
name = "cbm-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
cbm-program-activator = { workspace = true }
cbm-program-stub = { workspace = true }
clap = { workspace = true, features = ["derive"] }
indicatif = { workspace = true }
solana-logger = { workspace = true }
solana-rpc = { workspace = true }
solana-rpc-client = { workspace = true }
solana-sdk = { workspace = true }
solana-test-validator = { workspace = true }
termcolor = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[[bin]]
name = "cbm"
path = "src/main.rs"
