[package]
name = "core-bpf-migration-test-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
cbmt-program-activator = { workspace = true }
cbmt-program-stub = { workspace = true }
clap = { workspace = true, features = ["derive"] }
indicatif = { workspace = true }
solana-logger = { workspace = true }
solana-rpc = { workspace = true }
solana-rpc-client = { workspace = true }
solana-sdk = { workspace = true }
solana-test-validator = { workspace = true }
termcolor = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[[bin]]
name = "cbmt"
path = "src/main.rs"
